lab1/Test/L1-A-9-40.cmm
int Uytz_wkMsSBOvaN ( ) {
}
struct {
  int ml_ES5afXFis0 
  struct qnNxkEDjj4FVwq7 pA7K ;
  int kzTgtKvAvW8Yv74M ;
  int zSiB6jaT8unm7 ;
  struct q6eYvz_O nJZY9pqy981vEVAe ;
  float TRdWLud8PW , a [ 793913605 ] = WNijMnVQy4 
    = HicoP09SMx == TfMz - oU / ! ! _Sz6ezQT9WSu ( dqzyxT 
    , iHezSuuoq = BeZ2JeYhvUsN19jLMcl = xx4z || DTY0 && 
    nURyyiTl3xGcl8Luck > ! FdYd_dveVSp6s [ VCb4l = LkfUlj0bNL 
    >= _YQIK__OwhFmX + ( Z = S1Nbz1uZvde5DIJHOqNX || eKJXnwuFgi86vifB0l 
    < ( fvkTcMiRyWqJUhliH || K8LO554jlY4MOF <= ( mbTOe3FbvhrXMoUEy 
    && CvgqK != s0sqyTvofIMBG ) * ! kMksC ) . Xco5f89j6GZZXVp 
    ) || 132690181.1061993056 * o5g40Ohsrh78x3HvTS ] ) 
    + - - cT ( ) . aXTFK_v * ! 1857317787 
};
int , wQnK7Om0QvQIkhQFgPl 

;
int l 
;
int ;
int ;
struct SuUIx {
  int B99zRafvT9t ;
};
int ;
int ck_1bzlbKrUT ( int LZDiLAeVJ ) {
  return GhryDVV2fs ;
}
int Ayyjz7c ( int Yhc , int iXvVu_gAJlK ) {
}
int ;
int G4mz3pDL ( ) {
}
int ErnT7wkc_tH ( ) {
  if ( KT ) {
    zpQF8YSA2bJ ;
    mBSs ;
    TExg1Fy5 ;
    d9ZsZg4uGYQ ;
    QooOecz2awvRQD2nki ;
    gM6xck ;
    if ( OLZ4dY     while ( tpp1Z9PLtmGHJIjL99d ) 
          if ( SMGTJoZhmp )     nPdlowW ;
else     bIyOws7Sb4DN ;


else     if ( o4xGMOa1kA5JsG400It )     vHEAjIg ;


  }
}
